json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,255 @@
 {
  "items": [
   {
+    "id": "rJ9WNsNbQUqWpBAdhA9MnQ",
+    "url": "https://remoteok.io/jobs/68778",
+    "title": "Box Dice",
+    "tags": [
+      "DBG:surround``OR(locat, anywher, base, resid) 7W OR(europ, european, europeanunion)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:backbone.js/frontend/8",
+      "DBG_TECH1:k/t/w:ios/apple/2",
+      "DBG_TECH1:k/t/w:ios/mobile/2",
+      "DBG_TECH1:k/t/w:javascript/frontend/1",
+      "DBG_TECH1:k/t/w:javascript/nodejs/1",
+      "DBG_TECH1:k/t/w:php/php/5",
+      "DBG_TECH1:k/t/w:reactjs/frontend/8",
+      "DBG_TECH1:k/t/w:ruby-on-rails/ruby/8",
+      "DBG_TECH1:k/t/w:ruby/ruby/2",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=4, go=0, nodejs=1, bigdata-ml=0, ruby=10, apple=2, java=1, gamedev=0, php=5, embedded=0, frontend=17}",
+      "REMOTE1/100",
+      "TECH1/frontend",
+      "TITLE1/unknown",
+      "TZ/Europe"
+    ],
+    "tagsNames1": [
+      "European time zones",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "frontend"
+    ],
+    "hiringOrganization": {
+      "name": "Box Dice",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 6, 2018 6:06:50 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<td><span><h2>Box Dice</h2></span><br><span><h3>Box Dice</h3></span></td><div><div><br>This is a remote role for developers based in Europe.<br><br>Job Description<br><br>Specifically, your focus and responsibility will be on back-end operations and development, decommissioning old PHP code by newer, smarter and better modules. Deployment automation and platform scaleability will also be high on your priorities.<br><br>Our Tech Stack:<br><br><br>* Our stack is a Rails application running a single page application.<br><br>* In the front-end we use JavaScript (backbone.js/marionette) and iOS/Android (React Native).<br><br>* In the backend we use MySQL, Redis, ElasticSearch, RabbitMQ, Linux running in AWS.<br><br><br><br><br>Requirements:<br><br><br>* Bachelors in Computer Science or equivalent experience.<br><br>* 3+ years of recent systems engineering, software engineering, site reliability, or dev-ops experience in a medium to large scale production Linux or other UNIX environment.<br><br>* 3+ years of development with Ruby.<br><br><br><br><br>Who will you be working with:<br><br>Travis Williams, CEO (https://www.linkedin.com/in/travis-williams-79986a...)<br><br><br>See video of Travis here discussing Box+Dice:<br><br>https://www.youtube.com/watch?v=v8pfG24ffZA&amp;featur...<p>See more jobs at <span>Box Dice</span></p></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "vnuDWhjOT3K1mjVyb1RMHQ",
+    "url": "http://jobmote.com/jobs/24768-etime-vantage-ic-remote",
+    "title": "eTime / Vantage IC - Remote",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``3N( 2N(work,remot), OR(us,across,globe,world,planet,100,set 3W hour) )",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Kforce Inc.",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 6, 2018 5:21:17 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>RESPONSIBILITIES:<br>Kforce is immediately adding full time eTime/Vantage IC to a telecommute, 100% remote work role. </p><p>Summary:<br>The role of a eTime/Vantage IC is responsible for the analysis and coding of client interface and integration requirements. This resource should have an understanding of the Time Module within Vantage. This role works closely with an implementation team to implement the Enterprise e-Time product. The eTime/Vantage IC interviews client subject matter experts for their external system data requirements. </p><p>Responsibilities include:<br>* Document, code, and test interfaces for the import and export of data for the Enterprise e-Time software<br>* Translates highly technical information to a non-technical audience and providing excellent follow up with clients<br>* Other duties as assigned </p><p>REQUIREMENTS:<br>* Bachelor's degree in a related field or equivalent in education and experience<br>* Technical training or equivalent experience in related technologies and/or systems implementations<br>* Experience with the A-Connect or Kronos Connect Interface tool<br>* Experience developing and conducting training sessions<br>* Experience providing integration services to external clients is desired<br>* An understanding of the Time Module within Vantage<br>* A high level of self-motivation and self-supervision with emphasis on client satisfaction and efficiently providing service in a billable environment </p><p>Kforce is an Equal Opportunity/Affirmative Action Employer. All qualified applicants will receive consideration for employment without regard to race, color, religion, sex, pregnancy, sexual orientation, gender identity, national origin, age, protected veteran status, or disability status. </p><ul><li>provided by Dice Analysis, Kronos, Software, Supervision, System, Systems, Test </li></ul></div></div><div></div></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "g4fxTE4USlumdkEdOw5cEg",
+    "url": "https://remote.com/jobs/browse/preview/mortgage-loan-processor-1",
+    "title": "Mortgage Loan Processor",
+    "tags": [
+      "DBG:surround``OR(you,we,employe,develop,engin,abl,workmat) 2W work 2W from 2W home",
+      "DBG_TECH1:k/t/w:facet/nodejs/8",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=3, nodejs=8, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/nodejs",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "nodejs"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 5, 2018 9:08:53 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "JOB TYPE: Long Term<br />3+ months<br /><br />EXPERIENCE: intermediate<br /><br />THE CLIENT:<br /><br />Leading Mortgage Brokers and Financial Planners who will help navigate customers through the competitive and ever-changing financial landscape to find the right products for them to live life how they want. They will go in to bat and negotiate, and  make the process as simple as possible. They are geared up to deliver fast results, avoid the pitfalls, and find product features to suit a customer's personal circumstances.<br /><br />THE GIG:<br /><br />We are looking for an experienced Mortgage Loan Processor with mandatory experience managing Australian clients, who has excellent attention to detail, accurate data entry skills, and is professional and outgoing. Excellent English communications skills are a must, as well as knowledge or experience of working with FLEX software.<br /><br />A DAY IN THE LIFE:<br /><br />Detailed data entry<br />Servicing calculators<br />Submitting loans<br />Following up on applications<br />Adhere to compliance guidelines<br />Use FLEX for data capture and note logs<br />OUR CLIENT HAS:<br /><br />Professionalism in every facet of the business, delivering the highest quality products that are best suited to individuals..<br /><br />YOU HAVE:<br /><br />Good English language skills and communication, both written and spoken.  <br /><br />Excellent admin skills<br /><br />Available to work 40 hours a week, in line with Australian business hours<br /><br />The future of work:<br /><br />GMT is a global recruitment company changing the face of recruitment and staffing. Our headquarters are in Melbourne, Australia but we are truly global. We are all about connecting the best international talent with the best companies. We provide our talent with the flexibility of being able to work from home (in your PJs if you like), on a pretty flexible schedule for amazing companies. Our hourly rates are very generous and you become part of our unique community; a place to share ideas, connect and socialise and continually up skill. It’s a wild and exciting ride with us!",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "GlOtpICtQAeFadMAXpS2jA",
+    "url": "https://remote.co/job/primary-care-coder/",
+    "title": "Primary Care Coder",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "DBG_TECH1:k/t/w:macos/apple/2",
+      "DBG_TECH1:k/t/w:windows/dotnet/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=8, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=2, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/dotnet",
+      "TITLE1/unknown",
+      "TZ/America"
+    ],
+    "tagsNames1": [
+      "American time zones",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "dotnet"
+    ],
+    "hiringOrganization": {
+      "name": "Aviacode Incorporated",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 5, 2018 7:32:21 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Primary Care Coder at <span>Aviacode Incorporated</span></h2><div><span><i></i> Remote</span>        </div><div>            <p>Job Locations<strong>&nbsp;US</strong><strong>-Virtual/Remote</strong></p><p>Job ID</p><p>2018-1388</p><p># of Openings</p><p>1</p><p>Category</p><p>Medical Coding</p><p>Minimum Hours</p><p>40</p><p>Overview</p><p><strong>Primary Care E/M Coding Specialist (Per Diem)</strong></p><p>Are you interested in joining one of the nation’s leading providers of medical coding services that is experiencing impressive year-over-year growth? Aviacode is nationally recognized as one of the top medical coding companies in KLAS and Black Book Market Research surveys. Here is your opportunity to be part of this exciting team. We are hiring now and have an immediate need for Primary Care E/M Coders.&nbsp;<strong>This is a remote position working a minimum of 20 hours per week.</strong></p><p>Responsibilities</p><p>This position will provide high quality primary care E/M coding. Coder will be responsible for reviewing charts and identifying appropriate ICD-10 codes. Work will be completed virtually and must be of high quality. Experience with Family Practice and Internal Medicine.</p><p>Qualifications</p><ul><li>Current CPC or equivalent through the AAPC or AHIMA required</li><li>Must have at least two years of active E/M coding experience for primary care.</li><li>Must be able to maintain a 95% accuracy rate</li><li><strong>Coders for this role must provide their own computer with a Professional Windows Based Operating System (MAC is not compatible) and dual monitors</strong></li></ul>        </div><div>        <a href='https://careers-aviacode.icims.com/jobs/1388/primary-care-e-m-coder-(per-diem)/job' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "9cYMzqeCRxO1oxrT9vaLtg",
+    "url": "https://remote.co/job/teach-english-online/",
+    "title": "Teach English Online",
+    "tags": [
+      "DBG:surround``OR(work,2W(work,remot)) 3W from 2W OR(wherev,wherev,where)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "VIPKID",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "$",
+      "minValue": 14,
+      "maxValue": 22,
+      "info": "",
+      "unit": "HOUR",
+      "parser": "SalaryParserLargeText",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 5, 2018 6:53:15 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Teach English Online at <span>VIPKID</span></h2><div><span><i></i> Remote</span>         | <span> Freelance </span> | <span> International </span> | <span> Part-time </span></div><div>            <h4><strong>The VIPKid Teach English Online Opportunity</strong></h4><p><span>Looking for a flexible online teaching opportunity? What if we said you could wear yoga pants while doing it? &nbsp;We are seeking passionate educators to teach English online to over 300,000 students in China – with the flexibility to teach from anywhere and earn competitive pay of $14-$22/hour.</span></p><p><span>VIPKid is the leading global online K12 education leader and #1 Company for Remote Jobs by Forbes (as rated by FlexJobs). We’ve created a live, one-on-one online learning platform that matches motivated kids studying English in China with inspiring teachers like you. &nbsp;Also rated in Fast Company’s top 50 Most Innovative Company in the World we work with educational partners like ETS, TESOL and National Geographic Learning to develop the best curriculum and cutting-edge platform.</span></p><p><span>Why Teach with VIPKid?</span></p><h4><strong>Benefits</strong></h4><ul><li><span>Flexibility with no commute and no minimum hours</span></li><li><span>Curriculum provided</span></li><li><span>Opportunity to earn additional rewards </span></li><li><span>An amazing community of 40,000 teachers</span></li><li><span>Ability to participate in local events and conferences</span></li></ul><p><span>We develop the curriculum and our teachers work from wherever they want, set their own schedules, and take home competitive pay. Oh, and if you’re getting nervous that you don’t know any Chinese, don’t be. There’s no need to speak Chinese.</span></p><p><span>We also have a cutting-edge platform. Teachers love the fact that our classes are one-on-one. And they really, really love the fact that our highly interactive platform means:</span></p><ol><li><span>They can more easily engage their students (awesome) </span></li><li><span>They have convenient access to our pre-made lesson plans (double awesome).</span></li></ol><p><span>Did we mention we offer flexibility? That means you can work every day, only Tuesdays mornings, every other Friday, or whatever works for you.</span></p><h4><strong>Requirements &amp; Qualifications</strong></h4><ul><li><span>Teaching experience of any kind including tutoring, coaching or mentoring</span> <span>(1 year)</span></li><li><span>A Bachelor’s degree or higher</span></li><li><span>Eligibility to work in the U.S. or Canada</span></li><li><span>A computer and headset</span></li><li><span>A high-speed Internet connection</span></li><li><span>Comfy clothes. (OK, the comfy clothes are optional)</span></li></ul><h4><strong>Compensation</strong></h4><p><span>$14-$22/hr plus the opportunity to earn more through bonuses and referrals</span></p>        </div><div>        <a href='https://www.vipkidteachers.com?partnerId=15506073' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "s1O-PB_bTYWFDbDtAfrC1Q",
     "url": "https://remoteok.io/jobs/68751",
     "title": "Hardware Hacker Residence",
