json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,151 @@
 {
  "items": [
   {
+    "id": "IfGrSBxETQaHPFdxjhOfHA",
+    "url": "https://remote.co/job/vice-president-finance/",
+    "title": "Vice President Finance",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``work 2W from 2W home 4W OR(staff,cowork,offic,posit)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Mixtiles",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 7, 2018 3:33:44 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Vice President Finance at <span>Mixtiles</span></h2><div><span><i></i> Remote</span>        </div><div>            <h4><strong>VP Finance</strong></h4><p><strong>REMOTE</strong></p><p><strong>CEO TEAM</strong></p><p><strong>FULL-TIME</strong></p><p>Hi there, I’m Eytan, Co-Founder of Mixtiles. Three years ago I started Mixtiles together with David, my business partner and best friend. Since then, we’ve completely changed what people do with their photos and how they bring them to life, with millions of our tiles proudly presented on people’s walls.</p><p>We’re looking for a great VP Finance to join our team. Our company has grown significantly, and so have our finance needs. With our revenue run rate in the tens of millions of dollars, several international subsidiaries, tier-one equity and debt partners, and our own manufacturing facilities in several countries, we need a VP Finance who believes in our vision and can help us scale in pursuit of becoming the way the entire world puts photos on walls.</p><p><strong>What will you do?</strong></p><ul><li>You’ll take ownership of our existing financial processes and systems.</li><li>You’ll make our finances predictable and safe for high growth.</li><li>You’ll use your intimate understanding of our business to initiate growth strategies, such as sophisticated pricing schemes, shipping optimizations, marketing optimizations, supply chain modeling and raising growth capital.</li><li>You’ll own the company’s financial dashboards.</li><li>You’ll find new angles of looking at the company’s data in a way that’s actionable and has high impact.</li><li>You’ll work directly with our CEO, other executives and our board.</li><li>You’ll be a major contributor to the company’s success.</li></ul><p><strong>Who should you be?</strong></p><ul><li>We’re looking for someone who is data-driven; comfortable with modeling, statistics and data projects. While we expect you to have a deep understanding of all aspects of the financial side of the company (reporting, taxes, accounting, debt) we also expect you to have a passion for the business side (the market, competition, valuation, etc.). The way we see it, they’re two sides of the same entity.</li><li>You’re a player-coach who can get a lot done by yourself and can also lead a small team. You’re good with technology and have a lot of experience with Google Sheets. Great social skills are essential; people should love talking with you. You’ll have a sense of ownership and high standards.</li></ul><p><strong>Mixtiles is a fully remote company</strong></p><p>We’re a fully remote company. We don’t have a central office, and we all work from home or a shared office space of our choice. Working from home allows us to live a better life, and we think it’s also more productive. It isn’t for everyone, but we think it is for a lot of people. And we’ve noticed that people who like it, really like it.</p><p><strong>Our Vision</strong></p><p>Here’s how we think about the future. Every day, masses of people put photos on walls. They’ve been doing it since the days of cave paintings. Even today, they still use hammers, nails and pay $40+ per photo. We believe everyone would prefer a photo that sticks easily, leaves no marks and costs $10. It’s simple, and it makes sense.</p><p>Our focus is on spreading the word about Mixtiles and improving our product to meet our vision. We want Mixtiles to be the way the whole world puts photos on walls. And yes, that also means generating billions of dollars in revenue and profits.</p>        </div><div>        <a href='https://jobs.lever.co/mixtiles/2fd96039-fa21-47ce-9be1-0591e781b7be' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "1mD5E3a9TvG05f6RPsi_Dw",
+    "url": "http://jobmote.com/jobs/24817-edw-remote",
+    "title": "EDW - remote",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/America"
+    ],
+    "tagsNames1": [
+      "American time zones",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "IDC Technologies",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 6, 2018 10:21:39 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p><strong>Job Title- EDW Product SME</strong></p><p><strong>Location- Remote (preferable mid-west)</strong></p><p><strong>Full time position</strong></p><ul><li>2-3 years of Property and Casualty insurance experience - Good to have</li><li>5+ years of MS SQL, SSIS experience</li><li>Minimum 7 years of exp</li><li>Data modeling experience (optional)</li><li>1+ Consulting experience</li><li>Willing to travel (60-80% anywhere in the US)</li></ul><p><strong>Description of role:</strong></p><ul><li><p>Resource will work with clients to map (document) their policy, claims, billing and/or distribution management data from their source systems into our Pre-staging (EDW) format.</p></li><li><p>May include actual ETL implementation, data testing and evaluation, table extensions and data consulting work with the client on-site.</p><ul><li>provided by Dice Need Consultant </li></ul></li></ul></div></div><div></div></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "481Ol-DBTx-IGVa3NJbmWg",
+    "url": "https://angel.co/prestodoctor/jobs/70355-telemedicine-doctor-for-medical-marijuana-evaluations-remote",
+    "title": "Telemedicine Doctor for Medical Marijuana Evaluations (REMOTE)",
+    "tags": [
+      "Contract",
+      "DBG:surround``from 4W your 2W home",
+      "Medical Doctor",
+      "Operations",
+      "Pennsylvania",
+      "Philadelphia",
+      "Pittsburgh",
+      "REMOTE1/100",
+      "Remote OK",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "PrestoDoctor",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "$",
+      "minValue": 200000,
+      "maxValue": 250000,
+      "info": "No Equity",
+      "unit": "YEAR",
+      "parser": "SalaryParserDefaultImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 6, 2018 6:56:18 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><h2>Telemedicine Doctor for Medical Marijuana Evaluations (REMOTE) at PrestoDoctor</h2><div>Pennsylvania, Philadelphia, Pittsburgh, Remote · Contract</div><div></div></div><div><div>Skills</div><div>Medical Doctor</div><div>Compensation</div><div>$200K–$250K<br>No Equity</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>Set your own Schedule! Work from home! We are looking for physicians (any specialty) with a valid medical license to provide medical marijuana evaluations to patients. This is a remote, telemedicine position</p><p>Opportunity Details:<br>- Shifts available from 9:00am-9:00pm, work any hours of your choice<br>- Perform evaluations through PrestoDoctor's online telehealth platform, work from the comfort of your own home<br>- 5-10 Patients per hour<br>- Set your own prices, make up to $400/hour<br>- HIPAA  &amp; PCI Compliant Site</p><p>Requirements:<br>- Current Pennsylvania medical license<br>- Providers must have a telephone and modern computer with internet connection and webcam</p><p>Please contact us to learn more about this opportunity and other freelance medicine work that you may be interested in.</p><p>Visit us at <a href='https://prestodoctor.com' rel='nofollow'>https://prestodoctor.com</a> or send us an email for more info.</p><p>keywords: cannabis, medical marijuana, cannabis recommendations, weed, MD, medical residents, online evaluations</p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "rJ9WNsNbQUqWpBAdhA9MnQ",
     "url": "https://remoteok.io/jobs/68778",
     "title": "Box Dice",
